--- a/src/components/project.scss
+++ b/src/components/project.scss
@@ -37,3 +37,42 @@
     }
   }
 }
+
+// iPad Pro
+@media only screen 
+  and (min-width: 1024px) 
+  and (max-height: 1366px) 
+  and (orientation: portrait) 
+  and (-webkit-min-device-pixel-ratio: 1.5) {
+
+  .wrapper {
+      grid-template-columns: repeat(2, 1fr);
+      grid-auto-rows: minmax(100px, auto);
+      grid-gap: 3em;
+      font-size: 25px;
+  }
+  
+  #images {
+      max-width: 500px;
+      max-height: 400px;
+  }
+  
+  .nested {
+      display: grid;
+      max-width: 500px;
+      grid-gap: 1em;
+  }
+  
+  .nested #titles {
+      font-size: 25px;
+      letter-spacing: 0.125rem;
+      max-width: 300px;
+  }
+  
+  .nested #description {
+      max-width: 700px;
+      font-size: 20px;
+      letter-spacing: 0.125rem;
+  }
+
+}
