--- a/src/components/services.scss
+++ b/src/components/services.scss
@@ -14,7 +14,8 @@ $cOrangeRed: #C93200;
   margin: 0;
   padding: 0;
   background-color: #16192B;
-  max-width: 30rem;
+  max-width: 25rem;
+  padding-top: 3rem;
   border-radius: 0.4rem;
   overflow: hidden;
   
@@ -206,6 +207,51 @@ $cOrangeRed: #C93200;
 // iPhone 6 and 7
 @media only screen and (min-width: 375px) and (orientation: portrait) { 
   /* Your Styles... */ 
+
+}
+
+// iPad Pro
+@media only screen 
+  and (min-width: 1024px) 
+  and (max-height: 1366px) 
+  and (orientation: portrait) 
+  and (-webkit-min-device-pixel-ratio: 1.5) {
+
+  .accordion-list {
+    max-width: 900px;
+  }
+
+  .Services {
+
+    padding: 5em;
+    text-align: center;
+
+    h1 {
+      font-size: 40px;
+    }
+
+    p {
+      font-size: 20px;
+      letter-spacing: 0.125rem;
+    }
+
+    .Maps-Title {
+      font-size: 25px;
+    }
+
+    .Maps-Address {
+      font-size: 20px;
+    }
+
+    .Maps-Place {
+      font-size: 20px;
+    }
+
+    .wrapper {
+      display: inline;
+    }
+
+  }
 
 }
 
