--- a/src/components/what-we-do.scss
+++ b/src/components/what-we-do.scss
@@ -321,10 +321,58 @@
             display: block;
             margin-left: auto;
             margin-right: auto;
-            height: 450px;
+            height: 400px;
             width: 80%;
         }
     }
+}
+
+// iPad Pro
+@media only screen 
+  and (min-width: 1024px) 
+  and (max-height: 1366px) 
+  and (orientation: portrait) 
+  and (-webkit-min-device-pixel-ratio: 1.5) {
+
+  .Pelir {
+    h2 {
+        text-align: center;
+        font-size: 40px;
+    }
+
+    p {
+        text-align: center;
+    }
+  }
+
+  .Graphictures {
+    h2 {
+        text-align: center;
+        font-size: 40px;
+    }
+
+    p {
+        text-align: center;
+    }
+  }
+
+  .Flowingmuse {
+    h2 {
+        text-align: center;
+        font-size: 40px;
+    }
+
+    p {
+        text-align: center;
+    }
+  }
+
+  .container-1, .container-2 {
+    img {
+        height: 600px;
+        width: 90%;
+    }
+}
 }
 
   /* Keyframes Animations */
